# gxsync

./: Cargo.toml  README.md
src/: auth.rs  cli.rs  client.rs  config.rs  error.rs  lib.rs  maildir.rs  main.rs  sync.rs  sync_state.rs
